Ampliacion_05_for_incrementar/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : tipoSimple ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   5             | VOID ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'
   6             | declaracionVariable ';'

   7  declaraciones : declaraciones declaracionVariable ';'
   8                |

   9  parametros : parametros ',' definicionVariable
  10             | definicionVariable
  11             |

  12  definicionVariable : tipoSimple ID

  13  cuerpoDefinicion : sentencias
  14                   |

  15  sentencias : sentencias sentencia
  16             | sentencia

  17  sentencia : expresion '=' expresion ';'
  18            | WHILE '(' expresion ')' cuerpoCondicional
  19            | IF '(' expresion ')' cuerpoCondicional
  20            | IF '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional
  21            | WRITE expresiones ';'
  22            | READ expresiones ';'
  23            | invocacion ';'
  24            | RETURN expresion ';'
  25            | FOR '(' inicioFor ';' finFor ';' pasoFor ')' cuerpoCondicional
  26            | incre

  27  inicioFor : expresion '=' expresion
  28            |

  29  finFor : expresionLogica
  30         | expresionComparacion

  31  pasoFor : expresion '=' expresionAritmetica
  32          | incre

  33  incre : expresion AUMENTAR
  34        | expresion DISMINUIR

  35  cuerpoCondicional : '{' sentencias '}'
  36                    | sentencia

  37  declaracionVariable : tipoSimple identificador
  38                      | tipoSimple indices identificador
  39                      | STRUCT '{' campos '}' identificador
  40                      | STRUCT '{' campos '}' indices identificador

  41  campos : campos declaracionVariable ';'
  42         | declaracionVariable ';'

  43  expresiones : expresiones ',' expresion
  44              | expresion

  45  expresion : ID
  46            | CTE_ENTERA
  47            | CTE_REAL
  48            | CTE_CARACTER
  49            | expresionAritmetica
  50            | expresionComparacion
  51            | expresionLogica
  52            | '-' expresion
  53            | expresion '.' ID
  54            | '(' expresion ')'
  55            | '(' tipoSimple ')' expresion
  56            | invocacion
  57            | expresion '[' expresion ']'

  58  expresionAritmetica : expresion '+' expresion
  59                      | expresion '*' expresion
  60                      | expresion '/' expresion
  61                      | expresion '-' expresion
  62                      | expresion '%' expresion

  63  expresionComparacion : expresion '>' expresion
  64                       | expresion '<' expresion
  65                       | expresion MAYORIGUALQUE expresion
  66                       | expresion MENORIGUALQUE expresion
  67                       | expresion DISTINTO expresion
  68                       | expresion IGUALDAD expresion

  69  expresionLogica : expresion Y expresion
  70                  | expresion O expresion
  71                  | '!' expresion

  72  invocacion : expresion '(' argumentosLlamada ')'

  73  argumentosLlamada : expresiones
  74                    |

  75  indices : '[' CTE_ENTERA ']' indices
  76          | '[' CTE_ENTERA ']'

  77  identificador : identificador ',' ID
  78                | ID

  79  tipoSimple : INT
  80             | DOUBLE
  81             | CHAR

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . VOID MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definiciones : definiciones . definicion  (2)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	VOID  shift 7
	.  error

	definicion  goto 8
	tipoSimple  goto 9
	declaracionVariable  goto 10


state 3
	tipoSimple : INT .  (79)

	.  reduce 79


state 4
	tipoSimple : DOUBLE .  (80)

	.  reduce 80


state 5
	tipoSimple : CHAR .  (81)

	.  reduce 81


state 6
	declaracionVariable : STRUCT . '{' campos '}' identificador  (39)
	declaracionVariable : STRUCT . '{' campos '}' indices identificador  (40)

	'{'  shift 11
	.  error


state 7
	programa : definiciones VOID . MAIN '(' ')' '{' declaraciones sentencias '}'  (1)
	definicion : VOID . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	MAIN  shift 12
	ID  shift 13
	.  error


state 8
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 9
	definicion : tipoSimple . ID '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	declaracionVariable : tipoSimple . identificador  (37)
	declaracionVariable : tipoSimple . indices identificador  (38)

	ID  shift 14
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 10
	definicion : declaracionVariable . ';'  (6)

	';'  shift 18
	.  error


state 11
	declaracionVariable : STRUCT '{' . campos '}' identificador  (39)
	declaracionVariable : STRUCT '{' . campos '}' indices identificador  (40)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 20
	campos  goto 21


state 12
	programa : definiciones VOID MAIN . '(' ')' '{' declaraciones sentencias '}'  (1)

	'('  shift 22
	.  error


state 13
	definicion : VOID ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)

	'('  shift 23
	.  error


state 14
	definicion : tipoSimple ID . '(' parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	identificador : ID .  (78)

	'('  shift 24
	';'  reduce 78
	','  reduce 78


state 15
	indices : '[' . CTE_ENTERA ']' indices  (75)
	indices : '[' . CTE_ENTERA ']'  (76)

	CTE_ENTERA  shift 25
	.  error


state 16
	declaracionVariable : tipoSimple identificador .  (37)
	identificador : identificador . ',' ID  (77)

	','  shift 26
	';'  reduce 37


state 17
	declaracionVariable : tipoSimple indices . identificador  (38)

	ID  shift 27
	.  error

	identificador  goto 28


state 18
	definicion : declaracionVariable ';' .  (6)

	.  reduce 6


state 19
	declaracionVariable : tipoSimple . identificador  (37)
	declaracionVariable : tipoSimple . indices identificador  (38)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 16
	indices  goto 17


state 20
	campos : declaracionVariable . ';'  (42)

	';'  shift 29
	.  error


state 21
	declaracionVariable : STRUCT '{' campos . '}' identificador  (39)
	declaracionVariable : STRUCT '{' campos . '}' indices identificador  (40)
	campos : campos . declaracionVariable ';'  (41)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	'}'  shift 30
	.  error

	tipoSimple  goto 19
	declaracionVariable  goto 31


state 22
	programa : definiciones VOID MAIN '(' . ')' '{' declaraciones sentencias '}'  (1)

	')'  shift 32
	.  error


state 23
	definicion : VOID ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 34
	definicionVariable  goto 35


state 24
	definicion : tipoSimple ID '(' . parametros ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : .  (11)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	')'  reduce 11
	','  reduce 11

	tipoSimple  goto 33
	parametros  goto 36
	definicionVariable  goto 35


state 25
	indices : '[' CTE_ENTERA . ']' indices  (75)
	indices : '[' CTE_ENTERA . ']'  (76)

	']'  shift 37
	.  error


state 26
	identificador : identificador ',' . ID  (77)

	ID  shift 38
	.  error


state 27
	identificador : ID .  (78)

	.  reduce 78


state 28
	declaracionVariable : tipoSimple indices identificador .  (38)
	identificador : identificador . ',' ID  (77)

	','  shift 26
	';'  reduce 38


state 29
	campos : declaracionVariable ';' .  (42)

	.  reduce 42


state 30
	declaracionVariable : STRUCT '{' campos '}' . identificador  (39)
	declaracionVariable : STRUCT '{' campos '}' . indices identificador  (40)

	ID  shift 27
	'['  shift 15
	.  error

	identificador  goto 39
	indices  goto 40


state 31
	campos : campos declaracionVariable . ';'  (41)

	';'  shift 41
	.  error


state 32
	programa : definiciones VOID MAIN '(' ')' . '{' declaraciones sentencias '}'  (1)

	'{'  shift 42
	.  error


state 33
	definicionVariable : tipoSimple . ID  (12)

	ID  shift 43
	.  error


state 34
	definicion : VOID ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (5)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 44
	','  shift 45
	.  error


state 35
	parametros : definicionVariable .  (10)

	.  reduce 10


state 36
	definicion : tipoSimple ID '(' parametros . ')' '{' declaraciones cuerpoDefinicion '}'  (4)
	parametros : parametros . ',' definicionVariable  (9)

	')'  shift 46
	','  shift 45
	.  error


state 37
	indices : '[' CTE_ENTERA ']' . indices  (75)
	indices : '[' CTE_ENTERA ']' .  (76)

	'['  shift 15
	ID  reduce 76

	indices  goto 47


state 38
	identificador : identificador ',' ID .  (77)

	.  reduce 77


state 39
	declaracionVariable : STRUCT '{' campos '}' identificador .  (39)
	identificador : identificador . ',' ID  (77)

	','  shift 26
	';'  reduce 39


state 40
	declaracionVariable : STRUCT '{' campos '}' indices . identificador  (40)

	ID  shift 27
	.  error

	identificador  goto 48


state 41
	campos : campos declaracionVariable ';' .  (41)

	.  reduce 41


state 42
	programa : definiciones VOID MAIN '(' ')' '{' . declaraciones sentencias '}'  (1)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 49


state 43
	definicionVariable : tipoSimple ID .  (12)

	.  reduce 12


state 44
	definicion : VOID ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (5)

	'{'  shift 50
	.  error


state 45
	parametros : parametros ',' . definicionVariable  (9)

	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	.  error

	tipoSimple  goto 33
	definicionVariable  goto 51


state 46
	definicion : tipoSimple ID '(' parametros ')' . '{' declaraciones cuerpoDefinicion '}'  (4)

	'{'  shift 52
	.  error


state 47
	indices : '[' CTE_ENTERA ']' indices .  (75)

	.  reduce 75


state 48
	declaracionVariable : STRUCT '{' campos '}' indices identificador .  (40)
	identificador : identificador . ',' ID  (77)

	','  shift 26
	';'  reduce 40


state 49
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones . sentencias '}'  (1)
	declaraciones : declaraciones . declaracionVariable ';'  (7)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	FOR  shift 60
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	sentencias  goto 66
	tipoSimple  goto 19
	declaracionVariable  goto 67
	sentencia  goto 68
	expresion  goto 69
	invocacion  goto 70
	incre  goto 71
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 50
	definicion : VOID ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (5)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 75


state 51
	parametros : parametros ',' definicionVariable .  (9)

	.  reduce 9


state 52
	definicion : tipoSimple ID '(' parametros ')' '{' . declaraciones cuerpoDefinicion '}'  (4)
	declaraciones : .  (8)

	.  reduce 8

	declaraciones  goto 76


state 53
	expresion : CTE_ENTERA .  (46)

	.  reduce 46


state 54
	expresion : CTE_REAL .  (47)

	.  reduce 47


state 55
	expresion : CTE_CARACTER .  (48)

	.  reduce 48


state 56
	sentencia : READ . expresiones ';'  (22)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 77
	expresiones  goto 78
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 57
	sentencia : WRITE . expresiones ';'  (21)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 77
	expresiones  goto 80
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 58
	sentencia : WHILE . '(' expresion ')' cuerpoCondicional  (18)

	'('  shift 81
	.  error


state 59
	sentencia : IF . '(' expresion ')' cuerpoCondicional  (19)
	sentencia : IF . '(' expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	'('  shift 82
	.  error


state 60
	sentencia : FOR . '(' inicioFor ';' finFor ';' pasoFor ')' cuerpoCondicional  (25)

	'('  shift 83
	.  error


state 61
	sentencia : RETURN . expresion ';'  (24)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 84
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 62
	expresion : ID .  (45)

	.  reduce 45


state 63
	expresion : '-' . expresion  (52)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 85
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 64
	expresion : '(' . expresion ')'  (54)
	expresion : '(' . tipoSimple ')' expresion  (55)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	tipoSimple  goto 86
	expresion  goto 87
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 65
	expresionLogica : '!' . expresion  (71)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 88
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 66
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias . '}'  (1)
	sentencias : sentencias . sentencia  (15)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	FOR  shift 60
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'}'  shift 89
	'!'  shift 65
	.  error

	sentencia  goto 90
	expresion  goto 69
	invocacion  goto 70
	incre  goto 71
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 67
	declaraciones : declaraciones declaracionVariable . ';'  (7)

	';'  shift 91
	.  error


state 68
	sentencias : sentencia .  (16)

	.  reduce 16


state 69
	sentencia : expresion . '=' expresion ';'  (17)
	incre : expresion . AUMENTAR  (33)
	incre : expresion . DISMINUIR  (34)
	expresion : expresion . '.' ID  (53)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	Y  shift 92
	O  shift 93
	MAYORIGUALQUE  shift 94
	MENORIGUALQUE  shift 95
	DISTINTO  shift 96
	IGUALDAD  shift 97
	AUMENTAR  shift 98
	DISMINUIR  shift 99
	'='  shift 100
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'('  shift 110
	.  error


state 70
	sentencia : invocacion . ';'  (23)
	expresion : invocacion .  (56)

	';'  shift 111
	Y  reduce 56
	O  reduce 56
	MAYORIGUALQUE  reduce 56
	MENORIGUALQUE  reduce 56
	DISTINTO  reduce 56
	IGUALDAD  reduce 56
	AUMENTAR  reduce 56
	DISMINUIR  reduce 56
	'='  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'['  reduce 56
	'.'  reduce 56
	'('  reduce 56


state 71
	sentencia : incre .  (26)

	.  reduce 26


state 72
	expresion : expresionLogica .  (51)

	.  reduce 51


state 73
	expresion : expresionComparacion .  (50)

	.  reduce 50


state 74
	expresion : expresionAritmetica .  (49)

	.  reduce 49


state 75
	definicion : VOID ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (5)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	FOR  shift 60
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	'}'  reduce 14

	sentencias  goto 112
	tipoSimple  goto 19
	cuerpoDefinicion  goto 113
	declaracionVariable  goto 67
	sentencia  goto 68
	expresion  goto 69
	invocacion  goto 70
	incre  goto 71
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 76
	definicion : tipoSimple ID '(' parametros ')' '{' declaraciones . cuerpoDefinicion '}'  (4)
	declaraciones : declaraciones . declaracionVariable ';'  (7)
	cuerpoDefinicion : .  (14)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	READ  shift 56
	WRITE  shift 57
	WHILE  shift 58
	IF  shift 59
	FOR  shift 60
	INT  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	RETURN  shift 61
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	'}'  reduce 14

	sentencias  goto 112
	tipoSimple  goto 19
	cuerpoDefinicion  goto 114
	declaracionVariable  goto 67
	sentencia  goto 68
	expresion  goto 69
	invocacion  goto 70
	incre  goto 71
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 77
	expresiones : expresion .  (44)
	expresion : expresion . '.' ID  (53)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	Y  shift 92
	O  shift 93
	MAYORIGUALQUE  shift 94
	MENORIGUALQUE  shift 95
	DISTINTO  shift 96
	IGUALDAD  shift 97
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'('  shift 110
	')'  reduce 44
	';'  reduce 44
	','  reduce 44


state 78
	sentencia : READ expresiones . ';'  (22)
	expresiones : expresiones . ',' expresion  (43)

	';'  shift 115
	','  shift 116
	.  error


state 79
	expresion : invocacion .  (56)

	.  reduce 56


state 80
	sentencia : WRITE expresiones . ';'  (21)
	expresiones : expresiones . ',' expresion  (43)

	';'  shift 117
	','  shift 116
	.  error


state 81
	sentencia : WHILE '(' . expresion ')' cuerpoCondicional  (18)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 118
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 82
	sentencia : IF '(' . expresion ')' cuerpoCondicional  (19)
	sentencia : IF '(' . expresion ')' cuerpoCondicional ELSE cuerpoCondicional  (20)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 119
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 83
	sentencia : FOR '(' . inicioFor ';' finFor ';' pasoFor ')' cuerpoCondicional  (25)
	inicioFor : .  (28)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	';'  reduce 28

	expresion  goto 120
	invocacion  goto 79
	inicioFor  goto 121
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 84
	sentencia : RETURN expresion . ';'  (24)
	expresion : expresion . '.' ID  (53)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	Y  shift 92
	O  shift 93
	MAYORIGUALQUE  shift 94
	MENORIGUALQUE  shift 95
	DISTINTO  shift 96
	IGUALDAD  shift 97
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'('  shift 110
	';'  shift 122
	.  error


state 85
	expresion : '-' expresion .  (52)
	expresion : expresion . '.' ID  (53)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	'['  shift 108
	'.'  shift 109
	'('  shift 110
	Y  reduce 52
	O  reduce 52
	MAYORIGUALQUE  reduce 52
	MENORIGUALQUE  reduce 52
	DISTINTO  reduce 52
	IGUALDAD  reduce 52
	AUMENTAR  reduce 52
	DISMINUIR  reduce 52
	'='  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'%'  reduce 52
	']'  reduce 52
	')'  reduce 52
	';'  reduce 52
	','  reduce 52


state 86
	expresion : '(' tipoSimple . ')' expresion  (55)

	')'  shift 123
	.  error


state 87
	expresion : expresion . '.' ID  (53)
	expresion : '(' expresion . ')'  (54)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	Y  shift 92
	O  shift 93
	MAYORIGUALQUE  shift 94
	MENORIGUALQUE  shift 95
	DISTINTO  shift 96
	IGUALDAD  shift 97
	'>'  shift 101
	'<'  shift 102
	'+'  shift 103
	'-'  shift 104
	'*'  shift 105
	'/'  shift 106
	'%'  shift 107
	'['  shift 108
	'.'  shift 109
	'('  shift 110
	')'  shift 124
	.  error


state 88
	expresion : expresion . '.' ID  (53)
	expresion : expresion . '[' expresion ']'  (57)
	expresionAritmetica : expresion . '+' expresion  (58)
	expresionAritmetica : expresion . '*' expresion  (59)
	expresionAritmetica : expresion . '/' expresion  (60)
	expresionAritmetica : expresion . '-' expresion  (61)
	expresionAritmetica : expresion . '%' expresion  (62)
	expresionComparacion : expresion . '>' expresion  (63)
	expresionComparacion : expresion . '<' expresion  (64)
	expresionComparacion : expresion . MAYORIGUALQUE expresion  (65)
	expresionComparacion : expresion . MENORIGUALQUE expresion  (66)
	expresionComparacion : expresion . DISTINTO expresion  (67)
	expresionComparacion : expresion . IGUALDAD expresion  (68)
	expresionLogica : expresion . Y expresion  (69)
	expresionLogica : expresion . O expresion  (70)
	expresionLogica : '!' expresion .  (71)
	invocacion : expresion . '(' argumentosLlamada ')'  (72)

	'['  shift 108
	'.'  shift 109
	'('  shift 110
	Y  reduce 71
	O  reduce 71
	MAYORIGUALQUE  reduce 71
	MENORIGUALQUE  reduce 71
	DISTINTO  reduce 71
	IGUALDAD  reduce 71
	AUMENTAR  reduce 71
	DISMINUIR  reduce 71
	'='  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	']'  reduce 71
	')'  reduce 71
	';'  reduce 71
	','  reduce 71


state 89
	programa : definiciones VOID MAIN '(' ')' '{' declaraciones sentencias '}' .  (1)

	.  reduce 1


state 90
	sentencias : sentencias sentencia .  (15)

	.  reduce 15


state 91
	declaraciones : declaraciones declaracionVariable ';' .  (7)

	.  reduce 7


state 92
	expresionLogica : expresion Y . expresion  (69)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 125
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 93
	expresionLogica : expresion O . expresion  (70)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 126
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 94
	expresionComparacion : expresion MAYORIGUALQUE . expresion  (65)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 127
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 95
	expresionComparacion : expresion MENORIGUALQUE . expresion  (66)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 128
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 96
	expresionComparacion : expresion DISTINTO . expresion  (67)

	CTE_ENTERA  shift 53
	CTE_REAL  shift 54
	CTE_CARACTER  shift 55
	ID  shift 62
	'-'  shift 63
	'('  shift 64
	'!'  shift 65
	.  error

	expresion  goto 129
	invocacion  goto 79
	expresionLogica  goto 72
	expresionComparacion  goto 73
	expresionAritmetica  goto 74


state 97
	expresionComparacion : expresion IGUALDAD . expresion  (68)
